# smallPythonProjects

./: README.md  pyproject.toml
bagels/: BAGELS_README.md  bagels.py
